Fixed project section title on mobile and link sizes

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
 @keyframes slideFromBottom {
 	0% {
 		opacity: 0;
-		transform: translateY(200%);
+		transform: translateY(100%);
 	}
 	100% {
 		opacity: 1;
@@ -76,8 +76,7 @@ body {
 	position: relative;
 	opacity: 0;
 	height: 100%;
-	transform: translateY(300%);
-	animation: slideFromBottom 1.00s ease-out 1.00s forwards;
+	animation: slideFromBottom 0.75s ease-out 1.00s forwards;
 }
 
 #octocat-logo {
@@ -96,9 +95,8 @@ body {
 	position: relative;
 	opacity: 0;
 	height: 100%;
-	padding-top: 20%;
-	transform: translateY(300%);
-	animation: slideFromBottom 1.00s ease-out 1.00s forwards;
+	padding-top: 10vh;
+	animation: slideFromBottom .75s ease-out 1.00s forwards;
 }
 
 #linkedin-logo {
@@ -110,8 +108,7 @@ body {
 #resume {
 	height: 100%;
 	opacity: 0;
-	transform: translateY(300%);
-	animation: slideFromBottom 1.00s ease-out 1.00s forwards;
+	animation: slideFromBottom 0.75s ease-out 1.00s forwards;
 }
 
 #resume a {
@@ -201,10 +198,6 @@ body {
 #project-button:hover {
 	background-color: gray;
 	transition: background-color 0.25s ease-out;
-}
-
-.project-title-xs {
-	display: none;
 }
 
 .project {
@@ -314,7 +307,12 @@ body {
 }
 
 @media (min-width: 767px) {
-	.project-row {
+	#project-title-xs {
+		display: none;
+	}
+
+	#linkedin {
+		padding-top: ;
 	}
 }
 
